modified:   .vscode/settings.json 	modified:   src/components/Dialogs/Dialogs.js 	modified:   src/components/Profile/MyPosts/MyPosts.js
Some hardcode with arrays

--- a/01-firstapp/hello/.vscode/settings.json
+++ b/01-firstapp/hello/.vscode/settings.json
@@ -3,6 +3,12 @@
     "git.ignoreLimitWarning": true,
     "cSpell.words": [
         "Palo",
-        "Testov"
+        "Testov",
+        "Вариант",
+        "записи",
+        "использования",
+        "массива",
+        "собеседников",
+        "сообщений"
     ]
 }
