modified:   .vscode/settings.json 	modified:   src/components/Profile/MyPosts/MyPosts.js
добавлено onClick событие на добавление нового поста

--- a/01-firstapp/hello/.vscode/settings.json
+++ b/01-firstapp/hello/.vscode/settings.json
@@ -10,5 +10,12 @@
         "массива",
         "собеседников",
         "сообщений"
+    ],
+    "cSpell.ignoreWords": [
+        "выводит",
+        "которая",
+        "создает",
+        "ссылку",
+        "функцию"
     ]
 }
