modified:   .vscode/settings.json 	modified:   src/components/Profile/MyPosts/MyPosts.js 	modified:   src/index.js 	new file:   src/render.js 	modified:   src/state/state.js
Добавил возможность добавления постов  +  зачатки flux

--- a/01-firstapp/hello/.vscode/settings.json
+++ b/01-firstapp/hello/.vscode/settings.json
@@ -4,6 +4,10 @@
     "cSpell.words": [
         "Palo",
         "Testov",
+        "entire",
+        "rerender",
+        "rerender entire tree",
+        "tree",
         "Вариант",
         "записи",
         "использования",
