modified:   .vscode/settings.json 	modified:   src/App.js

--- a/01-firstapp/hello/.vscode/settings.json
+++ b/01-firstapp/hello/.vscode/settings.json
@@ -12,8 +12,10 @@
         "записи",
         "использования",
         "массива",
+        "рефакторинг",
         "собеседников",
-        "сообщений"
+        "сообщений",
+        "стэйта"
     ],
     "cSpell.ignoreWords": [
         "выводит",
