modified:   .vscode/settings.json 	modified:   src/state/state.js  some fixes

--- a/01-firstapp/hello/.vscode/settings.json
+++ b/01-firstapp/hello/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Вариант",
         "записи",
         "использования",
+        "исправить",
         "массива",
         "рефакторинг",
         "собеседников",
